Fixed issue with opening issues on mobile devices

--- a/src/components/css/work/projects.css
+++ b/src/components/css/work/projects.css
@@ -77,7 +77,7 @@
 }
 
 .touchScreenTrue {
-    opacity: 0 !important;
+    display: none !important;
 }
 
 .stack {
